# public-transport-expense-tracker-backend

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env  make_jwt.sh  prepare.sh
entity/: Cargo.toml
entity/src/: lib.rs  ride.rs  ride_tag.rs  tag_descriptor.rs  tag_enum_option.rs  user.rs
jwt_auth/: Cargo.toml
jwt_auth/src/: lib.rs
jwt_auth/src/jwt/: mod.rs  token_producer.rs  token_verifier.rs
jwt_auth/src/keys/: key_cache.rs  key_generator.rs  key_store.rs  mod.rs
migration/src/: lib.rs  m20250316_204923_user.rs  m20250323_195423_ride.rs  m20250323_220823_tag_descriptor.rs  m20250323_224215_ride_tag.rs  m20250323_230053_tag_enum_option.rs
src/: main.rs
src/fairings/: auth_cache.rs  db.rs  mod.rs
src/model/: error.rs  mod.rs  ride.rs  ride_tag_link.rs  tag.rs  tag_option.rs
src/request_guards/: auth.rs  mod.rs
src/responders/: mod.rs  pagination.rs
src/routes/: error.rs  mod.rs  ride.rs  ride_tag.rs  tag.rs  tag_option.rs  user.rs
test/sw_sw_integration/: .gitignore  server_fixtures.py  test_ride.py  test_ride_tag.py  test_tag_options.py  test_tags.py  tox.ini
test/sw_sw_integration/client/: api_config.py
test/sw_sw_integration/client/models/: Ride.py  RideTagGetReturn.py  RideTagLink.py  Tag.py  TagOption.py  User.py  Value.py  __init__.py
test/sw_sw_integration/client/services/: Ride_service.py  Tag_service.py  User_service.py  async_Ride_service.py  async_Tag_service.py  async_User_service.py
