[package]
name = "public-transport-expense-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt_auth = { path = "jwt_auth" }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.28", features = ["derive"] }
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
rocket = { version = "0.5.1", features = ["json"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "secrets"] }

