[package]
name = "jwt_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
openssl = "0.10.71"
jwt = { version = "0.16.0", features = ["openssl"] }
serde_json = "1.0.135"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }

[dev-dependencies]
tempfile = "3.18.0"
